--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Launches from "../components/Launches.astro";
 ---
 
 <Layout title="SpaceX Launches">
-  <div class="flex flex-col text-center justify-center">
-    <h2 class="mb-4 text-3xl tracking-tight font-extrabold text-white pointer-events-none">
-      Home Page
-    </h2>
-    <p class="text-slate-500 sm:text-lx dark:text-slate-400 font-light pointer-events-none">
-      The SpaceX launches project is a demo for the Astro demo
-    </p>
-  </div>
+  <Launches />
 </Layout>
