--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import HeaderButton from '../components/HeaderButton.astro'
+import HeaderButton from "../components/HeaderButton.astro";
 ---
 
 <header class="py-8 px-4 mx-auto max-w-xl lg:py-16 lg:px-6">
@@ -16,40 +16,68 @@ import HeaderButton from '../components/HeaderButton.astro'
     </p>
   </div>
   <nav
-    class="flex flex-col items-center justify-between w-full text-center md:flex-row"
+    class="flex flex-col items-center justify-between w-full text-center sm:flex-row sm:gap-6 gap-2"
   >
-    <HeaderButton>
-      <svg slot="before" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+    <HeaderButton href="/">
+      <svg
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke="currentColor"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="flex-shrink-0"
+      >
         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-        <path d="M4 13a8 8 0 0 1 7 7a6 6 0 0 0 3 -5a9 9 0 0 0 6 -8a3 3 0 0 0 -3 -3a9 9 0 0 0 -8 6a6 6 0 0 0 -5 3"></path>
+        <path
+          d="M4 13a8 8 0 0 1 7 7a6 6 0 0 0 3 -5a9 9 0 0 0 6 -8a3 3 0 0 0 -3 -3a9 9 0 0 0 -8 6a6 6 0 0 0 -5 3"
+        ></path>
         <path d="M7 14a6 6 0 0 0 -3 6a6 6 0 0 0 6 -3"></path>
         <path d="M15 9m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
       </svg>
-      <a href="/latest">
-        Latest launches
-      </a>
+      <span class="whitespace-nowrap">Latest launches</span>
     </HeaderButton>
-    <HeaderButton>
-      <svg slot="before" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+    <HeaderButton href="/oldest">
+      <svg
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke="currentColor"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="flex-shrink-0"
+      >
         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-        <path d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v0a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"></path>
+        <path
+          d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v0a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"
+        ></path>
         <path d="M5 8v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-10"></path>
         <path d="M10 12l4 0"></path>
       </svg>
-      <a href="/oldest">
-        Oldest launches
-      </a>
+      <span class="whitespace-nowrap">Oldest launches</span>
     </HeaderButton>
-    <HeaderButton>
-      <svg slot="before" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+    <HeaderButton href="/about">
+      <svg
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        stroke-width="2"
+        stroke="currentColor"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="felx-shrink-0"
+      >
         <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
         <path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0"></path>
         <path d="M12 9h.01"></path>
         <path d="M11 12h1v4h1"></path>
       </svg>
-      <a href="/about">
-        About the project
-      </a>
-      </HeaderButton>
+      <span class="whitespace-nowrap">About the project</span>
+    </HeaderButton>
   </nav>
 </header>
