--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Header from '../components/Header.astro';
+import Header from "../components/Header.astro";
 
 interface Props {
   title: string;
@@ -31,6 +31,6 @@ const { title } = Astro.props;
     font-family: system-ui, sans-serif;
     background: #13151a;
     background-size: 224px;
-    color-sheme: dark light;
+    color-scheme: dark light;
   }
 </style>
