fix/responsive design for mobile and browser page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,7 +11,7 @@ import HeaderButton from "../components/HeaderButton.astro";
       About the project
     </h2>
     <p
-      class="text-slate-500 sm:text-lx dark:text-slate-400 font-light pointer-events-none"
+      class="text-gray-500 sm:text-lx dark:text-gray-400 font-light pointer-events-none"
     >
       The SpaceX launches project is a demo for the Astro demo
     </p>
