--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import HeaderButton from "../components/HeaderButton.astro";
 ---
 
-<header class="py-8 px-4 mx-auto max-w-xl lg:py-16 lg:px-6">
+<header class="py-8 px-4 mx-auto max-w-3xl sm:py-16 sm:px-6">
   <div class="mx-auto text-center mb-8 lg:mb-16">
     <h1
       class="mb-4 text-5xl tracking-tight font-extrabold text-white pointer-events-none"
@@ -10,15 +10,15 @@ import HeaderButton from "../components/HeaderButton.astro";
       SpaceX Launches 🚀
     </h1>
     <p
-      class="text-slate-500 sm:text-lx dark:text-slate-400 font-light pointer-events-none"
+      class="text-gray-500 sm:text-lx dark:text-gray-400 font-light pointer-events-none"
     >
       All the information about SpaceX launches
     </p>
   </div>
   <nav
-    class="flex flex-col items-center justify-between w-full text-center sm:flex-row sm:gap-6 gap-2"
+    class="flex flex-col items-center justify-between w-full text-center md:flex-row sm:gap-6 gap-2"
   >
-    <HeaderButton href="/">
+    <HeaderButton href="/latest">
       <svg
         width="24"
         height="24"
