--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-slate-900 min-h-screen pb-32">
+  <body class="min-h-screen pb-32">
     <Header />
     <main class="max-w-5xl px-4 m-auto">
       <slot />
