--- a/src/components/CardLaunch.astro
+++ b/src/components/CardLaunch.astro
@@ -8,7 +8,7 @@ interface Props {
 }
 
 const { success, flightNumber, img, id, details } = Astro.props;
-const successText = success ? "Success" : "Failure";
+const launchStatus = success ? "Success" : "Failure";
 ---
 
 <a
@@ -21,11 +21,15 @@ const successText = success ? "Success" : "Failure";
 
   <header class="p-4 flex-grow">
     <span
-      class={`text-xs font-semibold mr-2 px-2.5 py-0.5 rounded ${
-        success ? "bg-green-200 text-green-900" : "bg-red-200 text-red-900"
-      }`}
+      class:list={[
+        "text-xs font-semibold mr-2 px-2.5 py-0.5 rounded",
+        {
+          "bg-green-200 text-green-900": success,
+          "bg-red-200 text-red-900": !success,
+        },
+      ]}
     >
-      {successText}
+      {launchStatus}
     </span>
 
     <h2 class="my-2 text-2xl font-bold tracking-tight text-white">
