--- a/src/components/Launches.astro
+++ b/src/components/Launches.astro
@@ -1,24 +1,8 @@
 ---
-import { type ApiResponse } from "../types/api.ts";
 import CardLaunch from "../components/CardLaunch.astro";
+import { getLatestLaunches } from "../lib/spacex.ts";
 
-const res = await fetch("https://api.spacexdata.com/v5/launches/query", {
-  method: "POST",
-  headers: {
-    "Content-Type": "application/json",
-  },
-  body: JSON.stringify({
-    query: {},
-    options: {
-      sort: {
-        date_unix: "asc",
-      },
-      limit: 12,
-    },
-  }),
-});
-
-const { docs: launches } = (await res.json()) as ApiResponse;
+const launches = await getLatestLaunches();
 ---
 
 <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3 text-white">
